--- a/static/index.html
+++ b/static/index.html
@@ -34,12 +34,20 @@ var H = canvas.height = window.innerHeight-50;
 
 function sendJSONXMLHTTPRequest(url, objects, callback) {
     var xhr = new XMLHttpRequest();
+
+    if(!objects){
+      xhr.open('GET', url);
+    }else{
+      xhr.open('POST', url, true);
+    }
+
     xhr.onreadystatechange = function () {
         if (xhr.readyState==4) {
             try {
                 if (xhr.status==200) {
                     //XXX: parse some JSON from the request!
                     //XXX: Pass the data to the callback!
+                    callback(JSON.parse(xhr.responseText));
                 }
             }
             catch(e) {
@@ -47,7 +55,16 @@ function sendJSONXMLHTTPRequest(url, objects, callback) {
             }
         }
     };
+
     //XXX: POST to a URL
+    xhr.setRequestHeader("Accept", "application/json");
+
+    if(!objects){
+      xhr.send(null);
+    }else{
+      xhr.setRequestHeader("Content-type", "application/json");
+      xhr.send(objects);
+    }
     //XXX: set the mimetype and the accept headers!
     // Remember to use application/json !
 }
@@ -136,8 +153,13 @@ function getPosition(e) {
 
 function addEntity(entity, data) {
     world[entity] = data;
-    drawNextFrame(); // (but should we?)
+    //drawNextFrame(); // (but should we?)
     //XXX: Send a XHTML Request that updates the entity you just  modified!
+    var entityUrl = '/entity/' + entity;
+    var jsonEntity = JSON.stringify(data);
+    sendJSONXMLHTTPRequest(entityUrl, jsonEntity, function(notUsed){
+      return null
+    });
 
 }
 
@@ -262,6 +284,9 @@ mouse.mousedraggers.push(function(x,y,clicked,e) {
 
 function update() {
     //XXX: TODO Get the world from the webservice using a XMLHTTPRequest
+    sendJSONXMLHTTPRequest('/world', null, function(newWorld){
+      world = newWorld;
+    });
     drawFrame();
 }
 
